--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,5 +13,10 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "styled-components": "^5.3.0"
+  },
+  "devDependencies": {
+    "@types/node": "^16.4.3",
+    "@types/react": "^17.0.15",
+    "typescript": "^4.3.5"
   }
 }
