--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@types/node": "^16.4.3",
     "@types/react": "^17.0.15",
+    "@types/styled-components": "^5.1.12",
     "typescript": "^4.3.5"
   }
 }
